--- a/cds_pr.ipynb
+++ b/cds_pr.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "61f45746",
+   "id": "085c4076",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "31dcfe0c",
+   "id": "c9a3e08d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "f732a70d",
+   "id": "85499108",
    "metadata": {
     "scrolled": true
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54a5a2fd",
+   "id": "b18bbc1b",
    "metadata": {},
    "source": [
     "# Start with basic dataframe to get Baseline"
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9e5f5de",
+   "id": "dc7b3921",
    "metadata": {},
    "source": [
     "Make a function preparing dataset"
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "96d55824",
+   "id": "f6ec5a10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f59860c7",
+   "id": "63c12de4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9d0a12f",
+   "id": "efc3e976",
    "metadata": {},
    "source": [
     "Make standart Train Test Split"
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "60274aed",
+   "id": "10015daa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "422d1686",
+   "id": "d21db908",
    "metadata": {},
    "source": [
     "Lets take default catboost"
@@ -241,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3c35c47a",
+   "id": "1a0b1693",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c1d317c7",
+   "id": "a18be490",
    "metadata": {
     "scrolled": true
    },
@@ -262,8 +262,8 @@
      "output_type": "stream",
      "text": [
       "Learning rate set to 0.173181\n",
-      "0:\tlearn: 2.1934731\ttest: 2.1958543\tbest: 2.1958543 (0)\ttotal: 158ms\tremaining: 47.3s\n",
-      "20:\tlearn: 2.0692537\ttest: 2.1918308\tbest: 2.1894681 (14)\ttotal: 1.14s\tremaining: 15.1s\n",
+      "0:\tlearn: 2.1934731\ttest: 2.1958543\tbest: 2.1958543 (0)\ttotal: 157ms\tremaining: 47.1s\n",
+      "20:\tlearn: 2.0692537\ttest: 2.1918308\tbest: 2.1894681 (14)\ttotal: 1.21s\tremaining: 16.1s\n",
       "Stopped by overfitting detector  (20 iterations wait)\n",
       "\n",
       "bestTest = 2.189468085\n",
@@ -285,7 +285,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8af0a7cf",
+   "id": "b54d8d87",
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e21a07e",
+   "id": "b2b6e466",
    "metadata": {},
    "source": [
     "# Lets Validate"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a95559c2",
+   "id": "895e276c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "1eaae95b",
+   "id": "f2f9e7a4",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "de7a5004",
+   "id": "df75e752",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,16 +458,16 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "eaf904d8",
+   "id": "97c38bb2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "result.to_csv('subs/answer_basic.csv', index=False)"
+    "result.to_csv('subs/01_answer_basic.csv', index=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f17effcf",
+   "id": "412a544e",
    "metadata": {},
    "source": [
     "# Adding additional data"
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "10e3d38d",
+   "id": "9376fae2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "5d2e21b9",
+   "id": "9a77df1b",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "dca8061c",
+   "id": "c0fdb4f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "abcf1089",
+   "id": "8945ba1c",
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ff040b7",
+   "id": "2bd209c6",
    "metadata": {},
    "source": [
     "# Lets teach catboost  on updated dataframe"
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeedfb8d",
+   "id": "18847639",
    "metadata": {},
    "source": [
     "Make function: preparation of dataframe\n",
@@ -907,16 +907,21 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "148bd52f",
+   "id": "f4a89214",
    "metadata": {},
    "outputs": [],
    "source": [
     "def prep_1(df):\n",
     "    if df is None:\n",
     "        return 0\n",
+    "    \n",
     "    temp = df.copy()\n",
     "    \n",
-    "    temp = temp.drop('car_id', axis=1)\n",
+    "    # delete unnecessary columns\n",
+    "    cols = ['car_id', 'target_class', 'target_reg']\n",
+    "    for col in cols:\n",
+    "        if col in df.columns:\n",
+    "            temp = temp.drop(col, axis=1)\n",
     "    \n",
     "    # make ohe for columns car_type and fuel_type\n",
     "    ohe = pd.get_dummies(df[['car_type', 'fuel_type']]).drop(['car_type_business', 'fuel_type_electro'], axis=1)\n",
@@ -939,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34ca9c23",
+   "id": "3deae07b",
    "metadata": {},
    "source": [
     "Make standart Train Test Split"
@@ -948,12 +953,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b80e5bae",
+   "id": "7245a248",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = prep_1(df.drop(['target_reg'], axis=1))\n",
-    "X = df.drop(['target_class'], axis=1)\n",
+    "X = prep_1(df)\n",
     "y = df['target_class']\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=42)"
@@ -961,7 +965,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0a3a9b02",
+   "id": "7359c6c3",
    "metadata": {},
    "source": [
     "Using default catboost"
@@ -970,7 +974,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6a8137b1",
+   "id": "cc281d30",
    "metadata": {},
    "outputs": [
     {
@@ -978,17 +982,17 @@
      "output_type": "stream",
      "text": [
       "Learning rate set to 0.173181\n",
-      "0:\tlearn: 1.5052117\ttest: 1.4863670\tbest: 1.4863670 (0)\ttotal: 55.3ms\tremaining: 16.5s\n",
-      "20:\tlearn: 0.3442367\ttest: 0.3899284\tbest: 0.3899284 (20)\ttotal: 1.4s\tremaining: 18.6s\n",
-      "40:\tlearn: 0.2766159\ttest: 0.3482224\tbest: 0.3482224 (40)\ttotal: 2.71s\tremaining: 17.1s\n",
-      "60:\tlearn: 0.2197693\ttest: 0.3171467\tbest: 0.3171467 (60)\ttotal: 4.07s\tremaining: 15.9s\n",
-      "80:\tlearn: 0.1911101\ttest: 0.3099999\tbest: 0.3096557 (73)\ttotal: 5.44s\tremaining: 14.7s\n",
-      "100:\tlearn: 0.1624790\ttest: 0.2944123\tbest: 0.2944123 (100)\ttotal: 6.8s\tremaining: 13.4s\n",
-      "120:\tlearn: 0.1443655\ttest: 0.2888865\tbest: 0.2886692 (119)\ttotal: 8.17s\tremaining: 12.1s\n",
-      "140:\tlearn: 0.1289645\ttest: 0.2870533\tbest: 0.2861430 (135)\ttotal: 9.54s\tremaining: 10.8s\n",
-      "160:\tlearn: 0.1132316\ttest: 0.2832533\tbest: 0.2832533 (160)\ttotal: 10.9s\tremaining: 9.41s\n",
-      "180:\tlearn: 0.1032326\ttest: 0.2811823\tbest: 0.2808394 (174)\ttotal: 12.3s\tremaining: 8.06s\n",
-      "200:\tlearn: 0.0942988\ttest: 0.2789796\tbest: 0.2788061 (199)\ttotal: 13.6s\tremaining: 6.7s\n",
+      "0:\tlearn: 1.5052117\ttest: 1.4863670\tbest: 1.4863670 (0)\ttotal: 59ms\tremaining: 17.6s\n",
+      "20:\tlearn: 0.3442367\ttest: 0.3899284\tbest: 0.3899284 (20)\ttotal: 1.48s\tremaining: 19.6s\n",
+      "40:\tlearn: 0.2766159\ttest: 0.3482224\tbest: 0.3482224 (40)\ttotal: 2.83s\tremaining: 17.9s\n",
+      "60:\tlearn: 0.2197693\ttest: 0.3171467\tbest: 0.3171467 (60)\ttotal: 4.29s\tremaining: 16.8s\n",
+      "80:\tlearn: 0.1911101\ttest: 0.3099999\tbest: 0.3096557 (73)\ttotal: 5.7s\tremaining: 15.4s\n",
+      "100:\tlearn: 0.1624790\ttest: 0.2944123\tbest: 0.2944123 (100)\ttotal: 7.12s\tremaining: 14s\n",
+      "120:\tlearn: 0.1443655\ttest: 0.2888865\tbest: 0.2886692 (119)\ttotal: 8.55s\tremaining: 12.7s\n",
+      "140:\tlearn: 0.1289645\ttest: 0.2870533\tbest: 0.2861430 (135)\ttotal: 9.98s\tremaining: 11.3s\n",
+      "160:\tlearn: 0.1132316\ttest: 0.2832533\tbest: 0.2832533 (160)\ttotal: 11.4s\tremaining: 9.86s\n",
+      "180:\tlearn: 0.1032326\ttest: 0.2811823\tbest: 0.2808394 (174)\ttotal: 12.8s\tremaining: 8.44s\n",
+      "200:\tlearn: 0.0942988\ttest: 0.2789796\tbest: 0.2788061 (199)\ttotal: 14.3s\tremaining: 7.03s\n",
       "Stopped by overfitting detector  (20 iterations wait)\n",
       "\n",
       "bestTest = 0.2788060771\n",
@@ -1017,9 +1021,9 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b8d9678a",
+   "id": "11a55908",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1039,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "de4d84e5",
+   "id": "294cafb9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,24 +1053,222 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "10e3db2a",
+   "execution_count": 23,
+   "id": "bde56f27",
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = ctb.predict(prep_1(df_val).drop(['target_class'], axis=1))"
+    "result = ctb.predict(prep_1(df_val))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "7b39b96a",
+   "execution_count": 24,
+   "id": "a2a929a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_val['target_class'] = result\n",
     "\n",
-    "df_val[['car_id','target_class']].to_csv('subs/answer_add_data.csv', index=False)"
+    "df_val[['car_id','target_class']].to_csv('subs/02_answer_add_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "288ccad6",
+   "metadata": {},
+   "source": [
+    "validated acc score: 0.888"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07c44b64",
+   "metadata": {},
+   "source": [
+    "# Setting validation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b0cc942",
+   "metadata": {},
+   "source": [
+    "We'll use `KFold` validation with 5 folds "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "ffffec7c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import KFold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "95d667cd",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 0, Accuracy 0.889\n",
+      "Fold 1, Accuracy 0.868\n",
+      "Fold 2, Accuracy 0.854\n",
+      "Fold 3, Accuracy 0.884\n",
+      "Fold 4, Accuracy 0.884\n",
+      "Overall mean accuracy 0.876, Std: 0.013\n"
+     ]
+    }
+   ],
+   "source": [
+    "n_splits = 5\n",
+    "ctbs = []\n",
+    "scores = []\n",
+    "\n",
+    "kf = KFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
+    "for num, (train_index, test_index) in enumerate(kf.split(X)):\n",
+    "    \n",
+    "    X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
+    "    y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
+    "    \n",
+    "    ctb = CatBoostClassifier(iterations=300).fit(X_train, y_train, \n",
+    "                                                 eval_set=(X_test, y_test), \n",
+    "                                                 cat_features=cat_cols, \n",
+    "                                                 early_stopping_rounds=20,\n",
+    "                                                 use_best_model=True,\n",
+    "                                                 verbose=False)\n",
+    "    y_pred = ctb.predict(X_test)\n",
+    "    score = round(np.mean(y_test.values == y_pred[:,0]), 3)\n",
+    "    scores.append(score)\n",
+    "    ctbs.append(ctb)\n",
+    "    print(f'Fold {num}, Accuracy {score}')\n",
+    "    \n",
+    "print(f'Overall mean accuracy {np.mean(scores).round(3)}, Std: {np.std(scores).round(3)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c5b2c8a",
+   "metadata": {},
+   "source": [
+    "Lets try `StratifiedKFold` with 5 folds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6c014aab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "3a5e5aec",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fold 0, Accuracy 0.895\n",
+      "Fold 1, Accuracy 0.902\n",
+      "Fold 2, Accuracy 0.893\n",
+      "Fold 3, Accuracy 0.882\n",
+      "Fold 4, Accuracy 0.863\n",
+      "Overall mean accuracy 0.887, Std: 0.014\n"
+     ]
+    }
+   ],
+   "source": [
+    "ctbs = []\n",
+    "scores = []\n",
+    "\n",
+    "kf = StratifiedKFold(n_splits=n_splits, shuffle=True, random_state=42)\n",
+    "for num, (train_index, test_index) in enumerate(kf.split(X, y)):\n",
+    "    \n",
+    "    X_train, X_test = X.iloc[train_index], X.iloc[test_index]\n",
+    "    y_train, y_test = y.iloc[train_index], y.iloc[test_index]\n",
+    "    \n",
+    "    ctb = CatBoostClassifier(iterations=300).fit(X_train, y_train, \n",
+    "                                                 eval_set=(X_test, y_test), \n",
+    "                                                 cat_features=cat_cols, \n",
+    "                                                 early_stopping_rounds=20,\n",
+    "                                                 use_best_model=True,\n",
+    "                                                 verbose=False)\n",
+    "    y_pred = ctb.predict(X_test)\n",
+    "    score = round(np.mean(y_test.values == y_pred[:,0]), 3)\n",
+    "    scores.append(score)\n",
+    "    ctbs.append(ctb)\n",
+    "    print(f'Fold {num}, Accuracy {score}')\n",
+    "    \n",
+    "print(f'Overall mean accuracy {np.mean(scores).round(3)}, Std: {np.std(scores).round(3)}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df9b1a15",
+   "metadata": {},
+   "source": [
+    "Stratified K-fold gives better perfomance than ordinary K-fold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6720ef5",
+   "metadata": {},
+   "source": [
+    "# Make prediction for test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "333e7003",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make matrix size*n_classes\n",
+    "y_pred = np.zeros((df_val.shape[0], y_train.nunique()))\n",
+    "for num, ctb in enumerate(ctbs):\n",
+    "    y_pred += ctb.predict_proba(prep_1(df_val))\n",
+    "\n",
+    "f = lambda x: ctb.classes_[x]\n",
+    "df_val['target_class'] = list(map(f, y_pred.argmax(axis=1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "d57a0b24",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df_val[['car_id','target_class']].to_csv('subs/03_answer_validated.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d60951b",
+   "metadata": {},
+   "source": [
+    "validated acc score: 0.898 \n",
+    "<br>We get increase of accuracy"
    ]
   }
  ],
